<resources>
    <string name="app_name">My Travel</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">QUÊN MẬT KHẨU ?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">Bạn Chưa Có Tài Khoản?</string>

    <string name="facebook_app_id">758103752476154</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="dangnhap"> <u> Đăng nhập</u></string>
    <string name="sao"> Đánh giá <r> *</r></string>
    <string name="bando"> <u>Bản đồ</u> </string>
    <string name="register_now"> Đăng Ký Ngay </string>
    <string name="phanhoi">Với mong muốn phục vụ khách hàng ngày càng tốt hơn, MyTravel rất mong muốn nhận được những ý kiến đóng góp hết sức quý báu của Quý khách hàng đối với chất lượng dịch vụ trong chương trình du lịch này. </string>
    <string name="phanhoi1">Chúng tôi chân thành cảm ơn Quý khách về sự tin tưởng đã dành cho MyTravel. Kích chúc quý khách một chuyến du lịch thật vui vẻ và bổ ích. rất mong được phục vụ Quý khách trong những chuyến du lịch tiếp theo.  </string>
    <string name="travel">It doesn’t matter where you’re going, it’s who you have beside you. </string>
    <string name="sumenh"><b>Mang lại cảm xúc thăng hoa</b> cho du khách trong mỗi hành trình - Đây là mục tiêu và sứ mệnh My Travel cam kết và nổ lực mang lại cho du khách. My Travel trở thành người bạn đồng hành cùng du khách trong mọi hành trình du lịch và tạo ra những giá trị tốt đẹp. Tại My Travel, du lịch không những là hành trình khám phá mà còn là hành trình sẻ chia, thể hiện dấu ấn khác biệt của ứng dụng My Travel.</string>
    <string name="khachhang"><b>Khách hàng là trung tâm</b>: My Travel luôn khẳng định khách hàng là trung tâm của mọi tiêu chí mà My Travel hướng đến, vì khách hàng là người góp phần to lớn xây dựng nên ý tưởng để hình thành My Travel.</string>
    <string name="chuyennghiep"><b>Chuyên nghiệp là thước đo</b>: Khẳng định uy tín ứng dụng, với mục tiêu không ngừng phát triển hoàn thiện để nâng tầm ứng dụng phù hợp với khách hàng nhất.</string>
    <string name="chatluong"><b>Chất lượng là danh dự</b>: My Travel cam kết chất lượng dịch vụ cung cấp đến khách hàng là tốt nhất, điều đó tạo ra sự khác biệt so với các ứng dụng khác.</string>
    <string name="chinhssanhyour"><b>* Giá tour bao gồm:  </b> \n- Chi phí xe máy lạnh phục vụ theo chương trình.\n- Chi phí ăn - uống theo chương trình.\n- Chi phí khách sạn tiêu chuẩn 2 khách/phòng.\n- Chi phí tham quan, tàu thuyền, hướng dẫn viên tiếng Việt\n- Quà tặng: Nón, nước suối, khăn lạnh, viết…\n\n<b>* Giá tour không bao gồm:\n</b>- Ăn uống ngoài chương trình, giặt ủi, điện thoại và các chi phí cá nhân\n- Chi phí phụ thu người nước ngoài, phụ thu phòng đơn (nếu có)\n\n <b>THÔNG TIN HƯỚNG DẪN\n</b>\n<b>* Vé trẻ em:  </b>\n- Vé tour: Trẻ em từ  6 đến 11 tuổi mua một nửa giá vé người lớn, trẻ em trên 11 tuổi mua vé như người lớn.\n- Đối với trẻ em dưới 6 tuổi, gia đình tự lo cho bé ăn ngủ và tự trả phí tham quan (nếu có). Hai người lớn chỉ được kèm một trẻ em. Từ trẻ thứ 2 trở lên, mỗi em phải 50% giá vé người lớn.\n- Tiêu chuẩn 50% giá tour bao gồm: Suất ăn, ghế ngồi và ngủ ghép chung với gia đình.</string>
    <string name="tamnhin">Ứng dụng được lên ý tưởng và xây dựng dựa trên nhu cầu du lịch của du khách trong và ngoài nước đăng tăng cao. Ứng dụng định hướng tập trung xây dựng hệ sinh thái đa dạng với 3 lĩnh vực lớn: Lữ hành, Vận tải - Hàng không, Thương mại - Dịch vụ. </string>
</resources>