<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Evaluate">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:background="#30B1A7A7"
        android:gravity="center">

        <ImageView
            android:id="@+id/back"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="#FAF3F3"
            app:srcCompat="@drawable/back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Về My Travel"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#0F2F80"
            android:textSize="26dp"
            android:textStyle="bold"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="7dp"
            android:padding="7dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="TẦM NHÌN"
            android:textStyle="bold"
            android:textColor="#364488"
            android:textSize="20dp" />
            <me.biubiubiu.justifytext.library.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/tamnhin"
                android:textColor="@color/black"
                android:textSize="18dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="SỨ MỆNH"
                android:textStyle="bold"
                android:textColor="#364488"
                android:textSize="20dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/sumenh"
                android:textColor="@color/black"
                android:textSize="18dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="Tiêu chí xây dựng app"
                android:textStyle="bold"
                android:textColor="#364488"
                android:textSize="20dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/khachhang"
                android:textColor="@color/black"
                android:textSize="18dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/chuyennghiep"
                android:textColor="@color/black"
                android:textSize="18dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/chatluong"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:layout_marginBottom="60dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#AB888787" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="Mọi thắc mắc xin liên hệ ©"
                android:textColor="@color/black"
                android:textSize="20dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="4dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="5"
                    android:text="Tel"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="4dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="3"
                    android:text="✆  0943.101.434"
                    android:textColor="@color/black"
                    android:textSize="18dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="235dp"
                android:layout_marginRight="5dp"
                android:background="#AB888787" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="4dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1.4"
                    android:text="Email"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="4dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="3"
                    android:gravity="end"
                    android:text="huuphuoc26201@gmail.com"
                    android:textColor="@color/black"
                    android:textSize="18dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>